# Final-Project

./: .gitignore   README.md  project_tree.txt  test.py
.github/workflows/: ci-cd.yml  main.yml
backend/: fastapi1.py  legal_report.docx  main.py  openai_module.py  pyproject.toml  test.py  test_json.py
frontend/: app.py  pyproject.toml  streamlit_app.py
