[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["shraddhabhandarkar3 <bhandarkar.s@northeastern.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.15"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
openai = "^0.27.4"
langchain-pinecone = "0.1.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.208"
python-dotenv = "^1.0.0"
python-docx = "^0.8.11"
fpdf = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
