[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["shraddhabhandarkar3 <bhandarkar.s@northeastern.edu>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "3.10.15"
streamlit = "^1.26.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
